# QQ-Robot-SwordFairy

./: .env  .gitignore  Dockerfile  LICENSE  README.md  bot.py  config-tools.toml  config-tools.toml.example  config.toml  config.toml.example  docker-compose.yaml  entrypoint.sh  pyproject.toml  temp_server.py  人格选择,可自创
.github/workflows/: docker-image.yml  image-build.yml
napcat/config/: onebot11_qq.json
plugins/: __init__.py  config.py  tools.py
plugins/llm-chat/: __init__.py  config.py  graph.py  tools.py
plugins/llm_chat/: __init__.py  config.py  graph.py  tools.py
tools/: analyze_image.py  code_runner.py  config.py  create_art.py  divination.py  draw.py  get_github_trending.py  get_music.py  get_time.py  get_weather_data.py  jina_fact_checking.py  jina_reader.py  jina_search.py  memos_manage.py  picture_api.py  singing.py  svg_card.py  url_reader.py  web_api.py
tools/prompt/: common_card.toml  create_art.toml  draw.toml  mini_card.toml  prompt.py  video.toml
