[project]
name = "llmq-horizon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-community>=0.3.10",
    "langchain>=0.3.10",
    "langchain-openai>=0.2.11",
    "langgraph>=0.2.56",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot2[fastapi]>=2.4.0",
    "pytz>=2024.2",
    "toml>=0.10.2",
    "tomli>=2.2.1",
    "pyquery>=2.0.1",
]
